fix: adapt spacing and vrts

--- a/packages/core/src/components/date-dropdown/date-dropdown.scss
+++ b/packages/core/src/components/date-dropdown/date-dropdown.scss
@@ -28,7 +28,6 @@
   }
 
   ix-button {
-    margin-top: 1rem;
     width: 100%;
   }
 
