--- a/packages/core/src/components/date-picker/date-picker.scss
+++ b/packages/core/src/components/date-picker/date-picker.scss
@@ -312,7 +312,7 @@
   .button {
     display: flex;
     justify-content: flex-end;
-    margin-top: 2rem;
+    margin-top: $default-space;
   }
 
   .hidden {
